added new customer and bank accounts